# ProTouchApiSimulator

./: .gitignore  CMakeLists.txt  CommonItems.qrc  Design.qrc  PluginLoader.cpp  PluginLoader.h  ProTouchApiSimulator.pro  README.md  dynamic_gui_tester.py  main.cpp  main.qml  messagegenerator.cpp  messagegenerator.h  setVersionWin.bat  tcpclient.cpp  tcpclient.h
.github/workflows/: TriggerProTouchApiSimulator.yml  ValidateProTouchApiSimulator.yml
.teamcity/ProTouchApiSimulator/: project-config.xml
.teamcity/ProTouchApiSimulator/vcsRoots/: ProTouchApiSimulator_ConfigsCi.xml  ProTouchApiSimulator_ProTouchApiSimulator.xml
.teamcity/ProTouchApiSimulator_Linux/: project-config.xml
.teamcity/ProTouchApiSimulator_Linux/buildTypes/: ProTouchApiSimulator_Linux_Build.xml
.teamcity/ProTouchApiSimulator_Windows/: project-config.xml
.teamcity/ProTouchApiSimulator_Windows/buildTypes/: ProTouchApiSimulator_Windows_APublicationToAws.xml  ProTouchApiSimulator_Windows_BuildX86.xml  ProTouchApiSimulator_Windows_BuildX86cmake.xml  ProTouchApiSimulator_Windows_StaticExeBuildX86.xml
.teamcity/ProTouchApiSimulator_Windows/vcsRoots/: ProTouchApiSimulator_Windows_Protouch3.xml
CommonItems/: ConnectionBox.qml  ControlMessageBox.qml  FreeTextBox.qml  InformationBox.qml  MessagesBox.qml  MonitoringMessageBox.qml  Version.qml  VideoMessageBox.qml  qmldir
DynamicGui/: CMakeLists.txt  DynamicGuiController.cpp  DynamicGuiController.h
UdpVideo/: CMakeLists.txt  GStreamer.h  LazyDynamicLibraryHelpers.cpp  LazyDynamicLibraryHelpers.h  UdpVideoController.cpp  UdpVideoController.h
deployment_linux/: deploy.sh
design/: Design.qml  DynamicUiTab.qml  PanelEditTab.qml  PtApiTab.qml  UdpVideoTab.qml  qmldir
publication/: publish.py  readme.md
